feat: replicate text authoring workflows
